--- a/SDU Scanner V13.4
+++ b/SDU Scanner V13.4
@@ -1,7 +1,7 @@
 // ==UserScript==
-// @name         SDU Scanner V13.3
+// @name         SDU Scanner V13.4
 // @namespace    http://tampermonkey.net/
-// @version      13.3
+// @version      13.4
 // @description  Trova la percentuale più alta di SDU trovate nel range di distanza dalla flotta, per funzionare la scheda della flotta specificata deve essere quella aperta per ultima
 // @author       lucadjr
 // @match        *://*atlas.eveeye.com/*
@@ -11,7 +11,7 @@
 
 (function () {
     'use strict';
-    let titolo = 'SDU Scanner V13.3 by lucadjr';
+    let titolo = 'SDU Scanner V13.4 by lucadjr';
     let currentX = 0, currentY = 0;
     let selectedColor = 'yellow';
     let fuel = 0;
@@ -73,7 +73,7 @@
             coeffgrowing2_value: coeffgrowing2_value,
             coeffgrowing3_value: coeffgrowing3_value,
 
-            
+
             sortProbRadio_value: sortProbRadio_value,
             sortDistanceRadio_value: sortDistanceRadio_value,
             sortCoeffRadio_value: sortCoeffRadio_value,
@@ -111,7 +111,7 @@
             coeffgrowing2_value = parametriSalvati.coeffgrowing2_value || false;
             coeffgrowing3_value = parametriSalvati.coeffgrowing3_value || false;
 
-            
+
             sortProbRadio_value = parametriSalvati.sortProbRadio_value || true;
             sortDistanceRadio_value = parametriSalvati.sortDistanceRadio_value || false;
             sortCoeffRadio_value = parametriSalvati.sortCoeffRadio_value || false;
@@ -978,30 +978,30 @@
     button.addEventListener('click', toggleScan);
 
     let previousScan = new Map();
-    let filtered_data = [];
+    let dati_filtrati_sb = [];
 
     function main_loop() {
         updateFleetPosition();
         const celle_pagina = scanData();
 
-        filtered_data = filterData(celle_pagina);
-        let bestclose = update_celle(filtered_data);
+        dati_filtrati_sb = filtra_distanza_sb(celle_pagina);
 
         // Aggiunta delle celle mancanti dalla scansione precedente
-        filtered_data = mergeWithPreviousScan(filtered_data);
+        dati_filtrati_sb = mergeWithPreviousScan(dati_filtrati_sb);
 
         // Ordinamento
         if (sortProbRadio.checked) {
-            filtered_data.sort((a, b) => parseInt(b.prob) - parseInt(a.prob));
+            dati_filtrati_sb.sort((a, b) => parseInt(b.prob) - parseInt(a.prob));
         } else if (sortDistanceRadio.checked) {
-            filtered_data.sort((a, b) => parseFloat(a.distance) - parseFloat(b.distance));
+            dati_filtrati_sb.sort((a, b) => parseFloat(a.distance) - parseFloat(b.distance));
         } else {
-            filtered_data.sort((a, b) => parseFloat(b.coeff) - parseFloat(a.coeff));
+            dati_filtrati_sb.sort((a, b) => parseFloat(b.coeff) - parseFloat(a.coeff));
         }
-        updateTable(filtered_data, bestclose);
-
+        const bestclose = update_celle(dati_filtrati_sb);
+        updateTable(dati_filtrati_sb, bestclose);
+           
         // Salva l'attuale scansione per il confronto con la successiva
-        updatePreviousScan(filtered_data);
+        updatePreviousScan(dati_filtrati_sb);
     }
 
     function mergeWithPreviousScan(currentData) {
@@ -1036,7 +1036,7 @@
             } else {
                 cell.growing = 0;
             }
-            cell.coeff = calculateCoeff(cell.prob, cell.count, cell.sdu, cell.growing);
+            cell.coeff = calculateCoeff(cell.prob, cell.count, cell.sdu, cell.growing, 1, 1, 1);
             mergedData.set(key, cell);
         });
 
@@ -1098,11 +1098,11 @@
 
                 const distance = calculateDistance(currentX, currentY, x, y);
                 const growing = 0;
-                
+
                 //const coeff = calculateCoeff(item.prob, item.count, item.sdu, item.growing);
-            
+
                 //const cellData = {coeff, prob, x, y, distance, count, sdu, time: timeOnly, growing };
-                const cellData = {prob, x, y, distance, count, sdu, time: timeOnly, growing };
+                const cellData = { prob, x, y, distance, count, sdu, time: timeOnly, growing };
                 data.push(cellData);
             }
         });
@@ -1110,7 +1110,7 @@
         return data;
     }
 
-    function filterData(data) {
+    function filtra_distanza_sb(data) {
         if (DistanceLimitcheckbox.checked) {
             maxdistanceFromSB = parseFloat(maxDistancefromSBTxt.value);
         } else {
@@ -1156,7 +1156,7 @@
                         const y = bestArea.y + dy;
                         const sectorData = data.find(item => item.x === x && item.y === y);
                         if (sectorData) {
-                            const coeff = calculateCoeff(sectorData.prob, sectorData.count, sectorData.sdu, sectorData.growing);
+                            const coeff = calculateCoeff(sectorData.prob, sectorData.count, sectorData.sdu, sectorData.growing, 1, 1, 1);
 
                             // Calcola la distanza tra la cella corrente e currentX, currentY
                             const distanceToCurrent = calculateDistance(currentX, currentY, x, y);
@@ -1180,82 +1180,40 @@
 
         return bestCell;
     }
-    function trovapercentuale(data, maxdistance, coeffcountchecked, coeffsduchecked, coeffgrowingchecked) {
-        let maxProbInRange = -1;
-        let maxCoeffInRange = -1;
-        let closestToMaxProb = null;
-        let closestToMaxCoeff = null;
 
-        // 🔍 Applichiamo il filtro simile a `findBestArea`
-        const filteredData = data.filter(item => {
-            const distanzacella = calculateDistance(currentX, currentY, item.x, item.y);
-            return distanzacella <= maxdistance;
-        });
-
-
-        if (filteredData.length === 0) {
-            return null;
-        }
-
-        // Troviamo i massimi valori di probabilità e coefficiente
-        filteredData.forEach(item => {
-            let inc_count = parseFloat(IncidenzaCountTxt.value);
-            let inc_sdu = parseFloat(IncidenzaSduTxt.value);
-            let inc_growing = parseFloat(IncidenzaGrowingTxt.value);
-            if (!coeffcountchecked) {
-                inc_count = 0;
-            }
-            if (!coeffsduchecked) {
-                inc_sdu = 0;
-            }
-            if (!coeffgrowingchecked) {
-                inc_growing = 0;
-            }
-            //let coeff= ((parseInt(item.prob) / ((parseInt(item.count) * inc_count) + 1) / ((parseInt(item.sdu) * inc_sdu) + 1))) / (1 + (parseFloat(item.growing) * inc_growing));
-            let coeff= (parseInt(item.prob)*(((1+parseInt(item.growing)) * incidenza_growing) + 1)) / ((parseInt(item.count) * incidenza_count) + 1) / ((parseInt(item.sdu) * incidenza_sdu) + 1) ;
-            item.coeff = coeff;
-            if (!isNaN(coeff) && coeff > maxCoeffInRange) maxCoeffInRange = coeff;
-        });
-
-
-        let minDistanceProb = Infinity;
-        let minDistanceCoeff = Infinity;
-
-        // Troviamo la cella con il valore massimo e distanza minima
-        filteredData.forEach(item => {
-            let distance = calculateDistance(currentX, currentY, item.x, item.y);
-            let coeff = parseFloat(item.coeff);
-
-            if (!isNaN(coeff) && coeff === maxCoeffInRange && distance < minDistanceCoeff) {
-                minDistanceCoeff = distance;
-                closestToMaxCoeff = item;
-            }
-        });
-
-
-        return closestToMaxCoeff;
-    }
     function update_celle(data) {
         const bestArea = findBestArea(data);
         cordArea_x_Txt.value = bestArea ? `${bestArea.x}` : 'N/A';
         cordArea_y_Txt.value = bestArea ? `${bestArea.y}` : 'N/A';
         probAreaTxt.value = bestArea ? parseFloat(bestArea.avgProb).toString() : 'N/A';
-
-        let bestclose1 = trovapercentuale(data, parseFloat(maxdistanceFromFleetTxt1.value), coeffcount1.checked, coeffsdu1.checked, coeffgrowing1.checked);
+        
+        const coeffCount1 = coeffcount1.checked ? 1 : 0;
+        const coeffSdu1 = coeffsdu1.checked ? 1 : 0;
+        const coeffGrowing1 = coeffgrowing1.checked ? 1 : 0;
+    
+        const bestclose1 = trovapercentuale(data, parseFloat(maxdistanceFromFleetTxt1.value), coeffCount1, coeffSdu1, coeffGrowing1);
         if (bestclose1 !== null) {
             probCellaTxt1.value = parseInt(bestclose1.prob).toString();// + '%';
             percCoordxTxt1.value = bestclose1 ? `${bestclose1.x}` : 'N/A';// bestclose1.x;
             percCoordyTxt1.value = bestclose1 ? `${bestclose1.y}` : 'N/A'; // Aggiorniamo il campo di input con le coordinate
         }
-
-        let bestclose2 = trovapercentuale(data, parseFloat(maxdistanceFromFleetTxt2.value), coeffcount2.checked, coeffsdu2.checked, coeffgrowing2.checked);
+    
+        const coeffCount2 = coeffcount2.checked ? 1 : 0;
+        const coeffSdu2 = coeffsdu2.checked ? 1 : 0;
+        const coeffGrowing2 = coeffgrowing2.checked ? 1 : 0;
+    
+        const bestclose2 = trovapercentuale(data, parseFloat(maxdistanceFromFleetTxt2.value), coeffCount2, coeffSdu2, coeffGrowing2);
         if (bestclose2 !== null) {
             probCellaTxt2.value = parseInt(bestclose2.prob).toString();// + '%';
             percCoordxTxt2.value = bestclose2 ? `${bestclose2.x}` : 'N/A';// bestclose2.x;
             percCoordyTxt2.value = bestclose2 ? `${bestclose2.y}` : 'N/A'; // Aggiorniamo il campo di input con le coordinate
         }
-
-        let bestclose3 = trovapercentuale(data, parseFloat(maxdistanceFromFleetTxt3.value), coeffcount3.checked, coeffsdu3.checked, coeffgrowing3.checked);
+    
+        const coeffCount3 = coeffcount3.checked ? 1 : 0;
+        const coeffSdu3 = coeffsdu3.checked ? 1 : 0;
+        const coeffGrowing3 = coeffgrowing3.checked ? 1 : 0;
+    
+        const bestclose3 = trovapercentuale(data, parseFloat(maxdistanceFromFleetTxt3.value), coeffCount3, coeffSdu3, coeffGrowing3);
         if (bestclose3 !== null) {
             probCellaTxt3.value = parseInt(bestclose3.prob).toString();// + '%';
             percCoordxTxt3.value = bestclose3 ? `${bestclose3.x}` : 'N/A';// bestclose3.x;
@@ -1264,6 +1222,42 @@
         return bestclose1;
     }
 
+    function trovapercentuale(data, maxdistance, coeffcountchecked, coeffsduchecked, coeffgrowingchecked) {
+        let maxCoeffInRange = -1;
+        let closestToMaxCoeff = null;
+    
+        // 🔍 Applichiamo il filtro simile a `findBestArea`
+        const filteredData = data.filter(item => {
+            const distanzacella = calculateDistance(currentX, currentY, item.x, item.y);
+            return distanzacella <= maxdistance;
+        });
+    
+        if (filteredData.length === 0) {
+            return null;
+        }
+    
+        // Troviamo i massimi valori di probabilità e coefficiente
+        filteredData.forEach(item => {
+            const coeff = calculateCoeff(item.prob, item.count, item.sdu, item.growing, coeffcountchecked, coeffsduchecked, coeffgrowingchecked);
+            item.coeff = coeff;
+            if (!isNaN(coeff) && coeff > maxCoeffInRange) maxCoeffInRange = coeff;
+        });
+    
+        let minDistanceCoeff = Infinity;
+    
+        // Troviamo la cella con il valore massimo e distanza minima
+        filteredData.forEach(item => {
+            let distance = calculateDistance(currentX, currentY, item.x, item.y);
+            let coeff = parseFloat(item.coeff);
+    
+            if (!isNaN(coeff) && coeff === maxCoeffInRange && distance < minDistanceCoeff) {
+                minDistanceCoeff = distance;
+                closestToMaxCoeff = item;
+            }
+        });
+    
+        return closestToMaxCoeff;
+    }
 
     function prob_media_area(centerX, centerY, data, minProb) {
         let totalProb = 0;
@@ -1300,7 +1294,7 @@
     </tr>
 `;
         data.forEach(item => {
-            const coeff = calculateCoeff(item.prob, item.count, item.sdu, item.growing);
+            const coeff = calculateCoeff(item.prob, item.count, item.sdu, item.growing, 1, 1, 1);
             const row = document.createElement('tr');
             row.innerHTML = `<td style="border-bottom: 1px solid #ccc; text-align: center;">${coeff.toFixed(1)}</td>
                      <td style="border-bottom: 1px solid #ccc; text-align: center;">${item.prob}</td>
@@ -1327,10 +1321,25 @@
             table.appendChild(row);
         });
     }
-    function calculateCoeff(prob, count, sdu, growing) {
-        return (parseInt(prob)*(((1+parseInt(growing)) * incidenza_growing) + 1)) / ((parseInt(count) * incidenza_count) + 1) / ((parseInt(sdu) * incidenza_sdu) + 1) ;
-        //return (parseInt(prob) / ((parseInt(count) * incidenza_count) + 1) / ((parseInt(sdu) * incidenza_sdu) + 1) / ((parseInt(growing) * incidenza_growing) + 1));
+    function calculateCoeff(prob, count, sdu, growing, coeffcountchecked, coeffsduchecked, coeffgrowingchecked) {
+        let inc_count = parseFloat(IncidenzaCountTxt.value);
+        let inc_sdu = parseFloat(IncidenzaSduTxt.value);
+        let inc_growing = parseFloat(IncidenzaGrowingTxt.value);
+        if (coeffcountchecked != 1) {
+            inc_count = 0;
+        }
+        if (coeffsduchecked != 1) {
+            inc_sdu = 0;
+        }
+        if (coeffgrowingchecked != 1) {
+            inc_growing = 0;
+        }
+    
+        const nominatore = parseInt(prob) * ((parseInt(growing) * inc_growing) + 1);
+        const denominatore = ((parseInt(count) * inc_count) + 1) * ((parseInt(sdu) * inc_sdu) + 1);
+        return nominatore / denominatore;
     }
+
     function calculateDistance(x1, y1, x2, y2) {
         return Math.sqrt(Math.pow(x2 - x1, 2) + Math.pow(y2 - y1, 2)).toFixed(2);
     }
